[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
diesel = "2.0.0"
diesel-derive-enum = { version = "1", features = ["..."] } # "postgres", "mysql" or "sqlite"
diesel_migrations = "2.0.0"
serde = "1.0.144"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
warp = "0.3.2"
