[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = "2.0.0"
diesel-derive-enum = "1.1.2" # "postgres", "mysql" or "sqlite"
diesel_migrations = "2.0.0"
envmnt = "0.10.4"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
warp = "0.3.2"
